Fix scrollbar colour
-Returned the scrollbar colour to blue following a change in chromium.

--- a/src/less/sta-lcars-ui.less
+++ b/src/less/sta-lcars-ui.less
@@ -66,7 +66,7 @@
     --color-border-highlight: @control-default;
 }
 
-body {
+* {
     scrollbar-color: @control-inline-default transparent;
     scrollbar-width: thin;
     font-family: 'Roboto Condensed', sans-serif;
